--- a/ws0115/ws0115.md
+++ b/ws0115/ws0115.md
@@ -23,18 +23,18 @@
    * useid(name) - FK
    * itemid(name, price) - FK
 4. order
-   * orderid - PK
+   * orderid - pk
    * userid(name, addr) - FK
    * itemid(name, price) - FK
    * 주문일자 regdate
    * qt
 5. favorite
    * favoriteid - PK
-   * userid(name) - FK
-   * itemid(name, price) - FK
+   * userid(name) - FK, PK
+   * itemid(name, price) - FK, PK
 6. rate
    * rateid - PK
-   * userid(name) - FK
-   * itemid(name) - FK
+   * userid(name) - FK, PK
+   * itemid(name) - FK, PK
    * ratenum
 
